--- a/extension.toml
+++ b/extension.toml
@@ -2,7 +2,7 @@ id = "sftp"
 name = "SFTP"
 version = "0.1.0"
 schema_version = 1
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Andrey <andreyc0d3r@gmail.com>"]
 description = "SFTP/FTP file synchronization for Zed - Upload on save, sync files and folders"
 repository = "https://github.com/andreyc0d3r/zed-sftp"
 
