feat: add downloadToTemp method for remote file retrieval and diffing
- Implemented downloadToTemp method in SftpClient to download remote files to a temporary directory.
- Added command "sftp.diff" to execute remote vs local file comparison using Zed's diff UI.
- Updated package version to 0.2.0 in package.json and package-lock.json.
- Enhanced type definitions in sftp-client.d.ts to include the new method.
- Updated relevant JavaScript and TypeScript files to support new functionality.

--- a/examples/zed-tasks.example.json
+++ b/examples/zed-tasks.example.json
@@ -73,6 +73,16 @@
     ],
     "reveal": "always",
     "tags": ["sftp", "watch"]
+  },
+  {
+    "label": "SFTP: Diff with Remote",
+    "command": "bash",
+    "args": [
+      "-c",
+      "REMOTE_FILE=$(mktemp /tmp/zed-sftp-diff.XXXXXX) && scp user@host:/remote/path/$ZED_RELATIVE_FILE \"$REMOTE_FILE\" && zed --diff \"$REMOTE_FILE\" \"$ZED_FILE\""
+    ],
+    "reveal": "never",
+    "tags": ["sftp", "diff"]
   }
 ]
 
